# Project_PerMed

./: .Rprofile  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
dataset/: dataset.ipynb
eda_lucia/: drug_filtering.ipynb  make_eda_figures.ipynb  morphine_eda.ipynb  morphine_eras_count_without_eid.csv  omop_eda.ipynb  prescriptions_eda.ipynb  select_drugs.ipynb
mappings/dose_era/: dose_era_atc.tsv  dose_era_chebi.tsv  dose_era_drugbank.tsv  dose_era_ingredients.tsv
mappings/drug_era/: drug_era_atc.tsv  drug_era_chebi.tsv  drug_era_drugbank.tsv  drug_era_ingredients.tsv  drug_era_manual_mapping.tsv
mappings/other/: Approved_ICD10.tsv
notebooks/cluster/: cluster_correlation.ipynb
notebooks/eda/: README.md  XS_eda_atc_analysis.md  XS_eda_drug_properties.md  XS_eda_ind_drug_era.md  atc.ipynb  atc_counts.tsv  atc_dict.py  drug_people_count.csv  eda_atc_analysis.md  eda_drug_properties.md  eda_focused_dataset.md  eda_ind_drug_era.md  filtered_df_3_atc.csv  filtered_df_4.csv  filtered_df_4_grouped.csv  filtered_df_5.csv  focused_dataset.ipynb  ind_drug_era.ipynb  ind_drug_era_2.ipynb  lacks_chebi.csv  people_bottom_157_with_info.csv  people_top_100_drugs_with_info.csv  people_top_100_with_info.csv  sum_drug_era.md  times_bottom_126_with_info.csv  times_top_100_with_info.csv  variety_202_drugs.csv  variety_208_drugs.csv  variety_208_drugs_with_info.csv  variety_209_drugs_with_info.csv  variety_218_drugs.csv  venn_diagram.ipynb
notebooks/eda_chris/: dose_era_upset_plot.ipynb
notebooks/eda_lucia/: conclutions_eda.md  filtered_drug_atc.tsv  (+2 more)
(+116 files in other folders)
