[project]
name = "project-permed"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Xinlu Shi", email = "spicastre@gmail.com" }
]
dependencies = [
    "notebook>=7.2.2",
    "numpy>=2.1.1",
    "seaborn>=0.13.2",
    "pandas>=2.2.2",
    "upsetplot>=0.9.0",
    "matplotlib-venn>=1.1.1",
    "venn>=0.1.3",
    "hmmlearn>=0.3.3",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
    "networkx>=3.4.2",
    "python-louvain>=0.16",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.3",
    "pre-commit>=3.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/project_permed"]
